--- a/Assignment_2/7.2 Introduction to iptables.md
+++ b/Assignment_2/7.2 Introduction to iptables.md
@@ -1,5 +1,7 @@
 
 
+![7_2_introduction](images/7_2_introduction.png)
+
 There are three predefined chains of rules (in the filter table), INPUT, FORWARD, and OUTPUT.
 
 ### Q1: How and when is each chain used?
