--- a/Assignment_2/7.3.1 Common firewall rules.md
+++ b/Assignment_2/7.3.1 Common firewall rules.md
@@ -64,6 +64,8 @@ iptables -A OUTPUT -o enp0s3 -m set --match-set prohibited_ips dst -m set ! --ma
 iptables -A OUTPUT -o enp0s3 -m set --match-set prohibited_ips dst -m set ! --match-set allowed_ips dst -j DROP
 ```
 
+![requirement_4_ipset_check](images/requirement_4_ipset_check.png)
+
 
 
 #### 5. Allow established connections (stateful inspection) (Requirement #5).
@@ -73,20 +75,43 @@ iptables -A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
 iptables -A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
 ```
 
-
+![requirement_5_iptable_check](images/requirement_5_iptable_check.png)
 
 
 
 #### Q8: How can you check if your rule(s) for established connections is (are) working?
 
+10.0.0.3 can ping successfully to 10.0.0.1, however, 10.0.0.1 can not ping 10.0.0.3
+
 
 
 #### 6. Allow ping and add protection from ping-flooding (Requirement #6).
 
+```shell
+# limit the rate of incoming ping requests to 1 request per second
+# drop any additional requests beyond that limit. This helps prevent ping flooding attacks that can consume network resources and cause denial of service.
+iptables -A INPUT -p icmp --icmp-type echo-request -m limit --limit 1/s -j ACCEPT
+iptables -A INPUT -p icmp --icmp-type echo-request -j DROP
+```
 
+![requirement_6_command](images/requirement_6_command.png)
+
+![requirement_6_iptables](images/requirement_6_iptables.png)
 
 #### Q9: How can you check if your rule(s) for limiting echo-request packets to 1 per second is (are) working? Give two examples!
 
+​	![assignment2_q9](images/assignment2_q9.png)
 
+​	![assignment2_q9_2](images/assignment2_q9_2.png)
 
 #### 7. Drop Xmas and Null packets (Requirement #7).
+
+```shell
+iptables -A INPUT -p tcp --tcp-flags ALL FIN,PSH,URG -j LOG --log-prefix "DROPPED XMAS PACKET:"
+iptables -A INPUT -p tcp --tcp-flags ALL FIN,PSH,URG -j DROP
+
+iptables -A INPUT -p tcp --tcp-flags ALL NONE -j LOG --log-prefix "DROPPED NULL PACKET:"
+iptables -A INPUT -p tcp --tcp-flags ALL NONE -j DROP
+```
+
+![requirement_7_iptables](images/requirement_7_iptables.png)
