--- a/Assignment_2/7.3.3 Logging all other packets.md
+++ b/Assignment_2/7.3.3 Logging all other packets.md
@@ -1,1 +1,9 @@
 #### 9. Log all other packets (Requirement #9).
+
+````shell
+# iptables -A INPUT -m limit --limit 5/min -j LOG --log-prefix "Unmatched packets: " --log-level 7
+
+iptables -A INPUT -j LOG --log-prefix "Unmatched packets: " --log-level 7
+````
+
+![requirement_9](images/requirement_9.png)
