--- a/Assignment_2/7.2.2 Logging.md
+++ b/Assignment_2/7.2.2 Logging.md
@@ -1,4 +1,12 @@
+```shell
+sudo /sbin/iptables -I OUTPUT 1 -p icmp --icmp-type echo-reply -j LOG
+```
+
 ![7_2_2_logging](images/7_2_2_logging.png)
+
+```shell
+watch -n 0,2 'dmesg | tail'
+```
 
 ![7_2_2_logging_watch](images/7_2_2_logging_watch.png)
 
