--- a/Assignment_2/7.3.1 Common firewall rules.md
+++ b/Assignment_2/7.3.1 Common firewall rules.md
@@ -64,7 +64,23 @@ iptables -A OUTPUT -o enp0s3 -m set --match-set prohibited_ips dst -m set ! --ma
 iptables -A OUTPUT -o enp0s3 -m set --match-set prohibited_ips dst -m set ! --match-set allowed_ips dst -j DROP
 ```
 
-![requirement_4_ipset_check](images/requirement_4_ipset_check.png)
+​	![requirement_4_ipset_check](images/requirement_4_ipset_check.png)
+
+#### How to test ?
+
+```shell
+# Nmap will send packets to the target IP address (10.0.0.3) from the attacker's IP address, as well as the three decoy IP addresses (10.1.1.1,192.168.1.1,172.16.1.1,169.254.1.1). 
+# This can help to hide the attacker's identity and make it more difficult for the target to detect the scan. 
+sudo nmap -sS -D 10.1.1.1,192.168.1.1,172.16.1.1,169.254.1.1 10.0.0.3
+```
+
+​	![assignment2_spoof_test_1](images/assignment2_spoof_test_1.png)
+
+![assigment2_spoof_test_2](images/assigment2_spoof_test_2.png)
+
+![assignment2_spoof_test_3](images/assignment2_spoof_test_3.png)
+
+![requirement_4_test](images/requirement_4_test.png)
 
 
 
@@ -115,3 +131,22 @@ iptables -A INPUT -p tcp --tcp-flags ALL NONE -j DROP
 ```
 
 ![requirement_7_iptables](images/requirement_7_iptables.png)
+
+Reflect on the importance of why Null and Xmas packets should be dropped imme- diately by the firewall.
+
+1. **Security:** Null and Xmas packets can be used to probe a network for open ports or other vulnerabilities. Dropping these packets can help prevent attackers from gaining unauthorized access to the network or exploiting vulnerabilities.
+2. **Network performance:** Null and Xmas packets can consume valuable network resources and cause network performance issues. By dropping these packets immediately, firewalls can help prevent network congestion and maintain network performance.
+
+#### How to test ?
+
+```shell
+# send Xmas packets, there should be no response
+nmap -sX -v 10.0.0.3
+
+# send Null packets, there should be no response
+nmap -sN -v 10.0.0.3
+```
+
+​	![assignment2_Xmas](images/assignment2_Xmas.png)
+
+![drop_Xmas_test](images/drop_Xmas_test.png)	![assignment2_Null](images/assignment2_Null.png)
