--- a/Assignment_2/7.3.2 Application specific rules.md
+++ b/Assignment_2/7.3.2 Application specific rules.md
@@ -15,3 +15,29 @@ iptables -A OUTPUT -p udp --sport 111 -m state --state ESTABLISHED -j ACCEPT
 ```
 
 ![requirement_8_iptables](images/requirement_8_iptables.png)
+
+#### How to test? 
+
+```shell
+# check open ports
+sudo nmap -sS -p 22 -v 10.0.0.3
+sudo nmap -sS -p 8080 -v 10.0.0.3
+sudo nmap -sS -p 111 -v 10.0.0.3
+sudo nmap -sU -p 111 -v 10.0.0.3
+```
+
+​	![assignment2_check_22_2](images/assignment2_check_22.png)
+
+![assignment2_check_22](images/assignment2_check_22_2.png)
+
+​	![assignment2_check_111_tcp_1](images/assignment2_check_111_tcp_1.png)
+
+![assignment2_check_111_tcp_2](images/assignment2_check_111_tcp_2.png)
+
+​	![assignment2_check_111_udp_1](images/assignment2_check_111_udp_1.png)
+
+![assignment2_check_111_udp_2](images/assignment2_check_111_udp_2.png)
+
+​	![assignment2_check_8080](images/assignment2_check_8080.png)
+
+![assignment2_check_8080_2](images/assignment2_check_8080_2.png)
