--- a/Assignment_2/7.3.3 Logging all other packets.md
+++ b/Assignment_2/7.3.3 Logging all other packets.md
@@ -4,6 +4,16 @@
 # iptables -A INPUT -m limit --limit 5/min -j LOG --log-prefix "Unmatched packets: " --log-level 7
 
 iptables -A INPUT -j LOG --log-prefix "Unmatched packets: " --log-level 7
+iptables -A OUTPUT -j LOG --log-prefix "Unmatched packets: " --log-level 7
 ````
 
 ![requirement_9](images/requirement_9.png)
+
+```shell
+# check other ports
+sudo nmap -sS -p 120 -v 10.0.0.3
+```
+
+​	![assignment2_check_120_tcp](images/assignment2_check_120_tcp.png)
+
+![requirement_9_test_2](images/requirement_9_test_2.png)
