--- a/Assignment_2/7.3.3 Logging all other packets.md
+++ b/Assignment_2/7.3.3 Logging all other packets.md
@@ -7,7 +7,7 @@ iptables -A INPUT -j LOG --log-prefix "Unmatched packets: " --log-level 7
 iptables -A OUTPUT -j LOG --log-prefix "Unmatched packets: " --log-level 7
 ````
 
-![requirement_9](images/requirement_9.png)
+![iptables_show](images/iptables_show.png)
 
 ```shell
 # check other ports
