--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -1,13 +1,76 @@
 # 7.2 Snort in intrusion detection mode
 
+#### Suspect 1:
+
+```shell
+# suspect1
+./execute suspect1 10.0.0.3
+
+
+```
+
+![attack_1](images/attack_1.png)
+
+In the suspect1 attack, we have observed that the attacker pushes the payload towards the firewall. Attack can impact the firewall with IDS if the attacker is successful in sending lot of meaningless data to the firewall which has intrusion detection system. Some example of the negative impact are, network slowdown, IDS overload which effects the performance of the IDS system, and resource exhaustion etc.
+
+**Add rules to discover attacks**
 
 
 
 
-### Q3: In this assignment, you have written specific rules to discover attacks. This paradigm is known as signature-based detection. Another paradigm for intrusion detec- tion is called anomaly-based detection. Elaborate on the advantages and disadvantages of each.
+
+#### Suspect 2: Xmas Attack
+
+```shell
+# suspect2
+./execute suspect2 10.0.0.3
+```
+
+![attack_2](images/attack_2.png)
+
+In the suspect2 attack, the attacker seems to **inject the XMAS attack.** The XMAS attack has a TCP packet with the URG, PUSH, and FIN flags set. These flags are also used in normal TCP traffic but they are not usually used together in a single packet.
+
+**Add rules to discover attacks**
+
+```SHELL
+alert tcp any any -> $HOME_NET any (flags: FPU; msg:"XMAS Attack Detected"; sid:100004;)
+```
+
+![attack_2_rule](images/attack_2_rule.png)
+
+#### Suspect 3:
+
+
+```shell
+# suspect3
+./execute suspect3 10.0.0.3
+```
+
+![attack_3](images/attack_3.png)
+
+
+```shell
+# suspect4
+./execute suspect4 10.0.0.3
+```
+
+![attack_4](images/attack_4.png)
+
+
+```shell
+# suspect5
+./execute suspect5 10.0.0.3
+```
+
+![attack_5](images/attack_5.png)
+
+
+
+
+#### Q3: In this assignment, you have written specific rules to discover attacks. This paradigm is known as signature-based detection. Another paradigm for intrusion detec- tion is called anomaly-based detection. Elaborate on the advantages and disadvantages of each.
 
 
 
 
 
-### Q4: If you remember only one thing from this lab, what should it be?
+#### Q4: If you remember only one thing from this lab, what should it be?
