--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -36,7 +36,7 @@ In the suspect2 attack, the attacker seems to **inject the XMAS attack.** The XM
 alert tcp any any -> $HOME_NET any (flags: FPU; msg:"XMAS Attack Detected"; sid:100004;)
 ```
 
-![attack_2_rule](images/attack_2_rule.png)
+​	![attack_2_rule](images/attack_2_rule.png)
 
 #### Suspect 3:
 
@@ -47,6 +47,22 @@ alert tcp any any -> $HOME_NET any (flags: FPU; msg:"XMAS Attack Detected"; sid:
 ```
 
 ![attack_3](images/attack_3.png)
+
+In suspect3 attack, the attacker uses the "PUSH ACK" flag in combination with a malicious payload. This payload seems to exploit a vulnerability in a web server or application. This could lead to remote code execution on the target system. The "PUSH ACK" flag set with a combination of the commands such as GET is used to retrieve a file from the target system or execute a command on it. In this case, **we see that the attacker is attempting to execute the "dir" command on the Windows system, which can be used to list the contents of a windows directory.** The attacker here try to attempt downloading or uploading files, modify system settings, or install malware on to the target system. This type of attack can be severe as the attacker could compromise the target system, or have unauthorized access to sensitive data, and disruption of critical services.
+
+​	![image-20230505170811025](images/image-20230505170811025.png)
+
+**Add rules to discover attacks**
+
+```shell
+alert tcp any any -> any $HTTP_PORTS (flags: PA; content:"GET /c/winnt/system32"; msg:"Possible Command Execution"; sid:1000002; rev:1;)
+```
+
+
+
+
+
+
 
 
 ```shell
