assign 4 attack 3 update

--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -1,6 +1,6 @@
-# 7.2 Snort in intrusion detection mode
+## 7.2 Snort in intrusion detection mode
 
-#### Suspect 1:
+#### 7.2.1 Suspect 1:
 
 ```shell
 # suspect1
@@ -19,7 +19,7 @@ In the suspect1 attack, we have observed that the attacker pushes the payload to
 
 
 
-#### Suspect 2: Xmas Attack
+#### 7.2.2 Suspect 2: Xmas Attack
 
 ```shell
 # suspect2
@@ -38,7 +38,9 @@ alert tcp any any -> $HOME_NET any (flags: FPU; msg:"XMAS Attack Detected"; sid:
 
 ​	![attack_2_rule](images/attack_2_rule.png)
 
-#### Suspect 3:
+
+
+#### 7.2.3 Suspect 3: Execute the command on the Windows system
 
 
 ```shell
@@ -55,14 +57,24 @@ In suspect3 attack, the attacker uses the "PUSH ACK" flag in combination with a 
 **Add rules to discover attacks**
 
 ```shell
-alert tcp any any -> any $HTTP_PORTS (flags: PA; content:"GET /c/winnt/system32"; msg:"Possible Command Execution"; sid:1000002; rev:1;)
+# Detect possible command execution over HTTP traffic
+var HTTP_PORTS 8080,80,443
+
+alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA;content:"/c"; content:"/system32"; within:15; msg:"Possible Command Execution"; sid:100005)
 ```
 
+- `flags: PA`: This specifies that the rule will only match TCP packets with the PSH and ACK flags set. This is because the rule is looking for a specific sequence of bytes that might not appear until a TCP segment is complete and pushed.
+- `content:"/c";`: This looks for the presence of the string "/c" in the payload of the TCP segment. This is the command line switch for the Windows Command Prompt to execute a command.
+- `content:"/system32";`: This looks for the presence of the string "/system32" in the payload of the TCP segment. This is the default location of many important system files and binaries on a Windows system.
+- `within:15`: This specifies that the two content matches must be within 15 bytes of each other. This is to ensure that they are part of the same command being executed.
+- `msg:"Possible Command Execution";`: This is the message that will be logged when the rule is triggered.
+- `sid:100005`: This is the unique identifier for the rule.
+
+![attack_3_alert](images/attack_3_alert.png)
 
 
 
-
-
+#### 7.2.4 Suspect 4:
 
 
 ```shell
@@ -71,6 +83,10 @@ alert tcp any any -> any $HTTP_PORTS (flags: PA; content:"GET /c/winnt/system32"
 ```
 
 ![attack_4](images/attack_4.png)
+
+
+
+#### 7.2.5 Suspect 5:
 
 
 ```shell
@@ -82,8 +98,7 @@ alert tcp any any -> any $HTTP_PORTS (flags: PA; content:"GET /c/winnt/system32"
 
 
 
-
-#### Q3: In this assignment, you have written specific rules to discover attacks. This paradigm is known as signature-based detection. Another paradigm for intrusion detec- tion is called anomaly-based detection. Elaborate on the advantages and disadvantages of each.
+#### Q3: In this assignment, you have written specific rules to discover attacks. This paradigm is known as signature-based detection. Another paradigm for intrusion detection is called anomaly-based detection. Elaborate on the advantages and disadvantages of each.
 
 
 
