Update 7.2 Snort in intrusion detection mode.md
Added answers to question 3 and question 4

--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -100,8 +100,14 @@ alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA;content:"/c"; content:"/sy
 
 #### Q3: In this assignment, you have written specific rules to discover attacks. This paradigm is known as signature-based detection. Another paradigm for intrusion detection is called anomaly-based detection. Elaborate on the advantages and disadvantages of each.
 
+Signature-based detection is based on predefined signatures or patterns of known malicious activities to identify threats. 
+It compares network traffic or system events against a signature database and triggers alerts when a match is found. 
+It is effective in detecting known threats but may struggle with new or unknown attacks.
 
-
+Anomaly-based detection however focuses on detecting deviations from normal behavior or baselines. 
+Anomaly-based detection establishes a baseline of normal activity and generates alerts (Intrusion Detection System) or takes action (Intrusion Detection and Handling System) when abnormal behavior or suspicious activity is detected. 
+It is effective in detecting previously unseen attacks but may generate more false positives and also require more resources.
 
 
 #### Q4: If you remember only one thing from this lab, what should it be?
+Making rules can be cumbersome. In signature-based detection the rules set should be generalized as much as possible to detect alicious activities on the network.
