Update 7.2 Snort in intrusion detection mode.md
Updated the explanation for suspect5 attack scenario.

--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -96,7 +96,7 @@ alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA;content:"/c"; content:"/sy
 
 ![attack_5](images/attack_5.png)
 
-
+We have observed from the wireshark logs that in suspect5 attack, the SYN (TCP synchronization) and ECN (Explicit Congestion Notification) flags are sent together repetitively to the destination from different IP addresses. This type of network attack can lead to a more sophisticated and impactful form of denial-of-service (DoS) attack. Some potential impact of this attack can be 'amplification attack', and 'resource exhaustion'. From the literature review we found that it may require more sophisticated mitigation techniques as well as higher network capacity to handle the increased traffic and congestion notifications effectively.
 
 #### Q3: In this assignment, you have written specific rules to discover attacks. This paradigm is known as signature-based detection. Another paradigm for intrusion detection is called anomaly-based detection. Elaborate on the advantages and disadvantages of each.
 
