assign 4 attack 1 update

--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -1,21 +1,25 @@
 ## 7.2 Snort in intrusion detection mode
 
-#### 7.2.1 Suspect 1:
+#### 7.2.1 Suspect 1: /bin/sh ?
 
 ```shell
 # suspect1
 ./execute suspect1 10.0.0.3
-
-
 ```
 
 ![attack_1](images/attack_1.png)
 
-In the suspect1 attack, we have observed that the attacker pushes the payload towards the firewall. Attack can impact the firewall with IDS if the attacker is successful in sending lot of meaningless data to the firewall which has intrusion detection system. Some example of the negative impact are, network slowdown, IDS overload which effects the performance of the IDS system, and resource exhaustion etc.
+- the `/bin/sh` command is used in scripts or other programs as a way to execute system commands or run shell scripts. 
 
 **Add rules to discover attacks**
 
+```shell
+alert tcp any any -> $HOME_NET any (flags: PA; content:"/bin/sh"; msg:"/bin/sh message detected"; sid:100007)
+```
 
+**check the alert**
+
+​	![attack_1_rule](images/attack_1_rule.png)
 
 
 
@@ -70,11 +74,11 @@ alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA;content:"/c"; content:"/sy
 - `msg:"Possible Command Execution";`: This is the message that will be logged when the rule is triggered.
 - `sid:100005`: This is the unique identifier for the rule.
 
-![attack_3_alert](images/attack_3_alert.png)
+​	![attack_3_alert](images/attack_3_alert.png)
 
 
 
-#### 7.2.4 Suspect 4:
+#### 7.2.4 Suspect 4: Activation of bots?
 
 
 ```shell
@@ -83,6 +87,25 @@ alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA;content:"/c"; content:"/sy
 ```
 
 ![attack_4](images/attack_4.png)
+
+- `0x44556677` seems to be a memory address, memory addresses are often notated as a hexidecimal value prefixed with `0x`
+- `activating botz` likely means activating bots, which are automated computer programs that can perform tasks.
+
+**Add rules to discover attacks**
+
+````shell
+
+
+
+alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA; content:"0x"; content:"activat"; msg:"Potential bot activation detected";  nocase; sid:100006)
+
+````
+
+
+
+
+
+
 
 
 
