--- a/Assignment_4/7.1 Snort in sniffer and packet logger modes.md
+++ b/Assignment_4/7.1 Snort in sniffer and packet logger modes.md
@@ -52,15 +52,11 @@ echo TESTMESSAGE SNORTLAB EDA491 | nc 10.0.0.3 5555
 
 #### Q1: To see the string, you had to add the payload option, but when the payload was captured, the output increased in size. Elaborate briefly whether payload data should be captured (consider log sizes, attack coverage, and amount of traffic passing the IDS).
 
-​	whether payload data should be captured
+The payload data in Snort logs can provide valuable information for analyzing network activity. However, capturing the payload can also significantly increase the size of the log files, which can make it more difficult to store and analyze the data.
 
-the logs can be useful for detail analysis for the attacker.
-
-- **Log size:** 
-- **Attack coverge** 
-- **amount of traffic passing the IDS**
-
-
+- **Log size:**  Storing all of payload data can quickly lead to large log files that are difficult to manage and analyze. Therefore, it's important to consider the available storage capacity.
+- **Attack coverge: ** Capturing payload data can improve the coverage of the IDS for certain types of attacks. However, capturing the payload may not be necessary for all types of attacks, and it may not always be the most efficient way to detect them.
+- **amount of traffic passing the IDS:** In high-traffic environments, capturing the payload data can significantly increase the processing overhead of the IDS and impact its performance. Therefore, it may be more practical to capture only specific types of payloads or to limit the capture to certain parts of the network where suspicious activity is more likely to occur.
 
 
 
@@ -115,3 +111,25 @@ tcpdump -r snort.log.1683293851 -A
 
 
 #### Q2: Elaborate briefly on storing log files in ASCII and pcap format. When would it be more suitable to store the files in ASCII, and when would it be more suitable to store the files in pcap format? Is there a difference in the way the log files are named?
+
+**ASCII**
+
+- **ASCII format logs** are **easy to read and analyse** using text editors or command-line tools, and they can be easily searched, sorted, and filtered based on specific criteria. They are also **relatively small in size** compared to pcap files, making them easier to store and manage.
+  - Each log entry is represented as a single line of text that contains the date and time of the event, the source and destination IP addresses and ports, the protocol used, and other relevant information
+  - **Do not contain the payload of the network packets** that triggered the rule.
+  
+
+**PCAP**
+
+- **pcap format** is a binary format that stores Snort log data in a packet capture file. 
+  - Each log entry is represented as a captured network packet that contains all the information about the network activity, **including the packet payload**.
+  - Pcap files are ideal for analyzing network traffic using packet analysis tools such as Wireshark, tcpdump, or Snort itself.
+  -  They are also useful for replaying network traffic for testing or debugging purposes. 
+  - However, pcap files are generally **larger in size** compared to ASCII logs, making them more difficult to store and manage.
+
+
+
+
+
+
+
