--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -1,6 +1,6 @@
-## 7.2 Snort in intrusion detection mode
+# 7.2 Snort in intrusion detection mode
 
-#### 7.2.1 Suspect 1: /bin/sh ?
+## 7.2.1 Suspect 1: /bin/sh ?
 
 ```shell
 # suspect1
@@ -23,7 +23,7 @@ alert tcp any any -> $HOME_NET any (flags: PA; content:"/bin/sh"; msg:"/bin/sh m
 
 
 
-#### 7.2.2 Suspect 2: Xmas Attack
+## 7.2.2 Suspect 2: Xmas Attack
 
 ```shell
 # suspect2
@@ -44,7 +44,7 @@ alert tcp any any -> $HOME_NET any (flags: FPU; msg:"XMAS Attack Detected"; sid:
 
 
 
-#### 7.2.3 Suspect 3: Execute the command on the Windows system
+## 7.2.3 Suspect 3: Execute the command on the Windows system
 
 
 ```shell
@@ -78,7 +78,7 @@ alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA;content:"/c"; content:"/sy
 
 
 
-#### 7.2.4 Suspect 4: Activation of bots?
+## 7.2.4 Suspect 4: Activation of bots?
 
 
 ```shell
@@ -95,21 +95,14 @@ alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA;content:"/c"; content:"/sy
 
 ````shell
 
-
-
-alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA; content:"0x"; content:"activat"; msg:"Potential bot activation detected";  nocase; sid:100006)
-
+alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA; content:"0x"; content:"activat"; within:30; msg:"Potential bot activation detected";  nocase; sid:100006)
 ````
 
+​	![attack_4_rule](images/attack_4_rule.png)
 
 
 
-
-
-
-
-
-#### 7.2.5 Suspect 5: SYN Flooding
+## 7.2.5 Suspect 5: SYN Flooding
 
 - The SYN flag is used during the TCP three-way handshake to initiate a connection between two hosts. 
 
@@ -159,11 +152,11 @@ alert tcp any any -> $HOME_NET any (flags: S; threshold: type limit, track by_sr
 
 #### Q3: In this assignment, you have written specific rules to discover attacks. This paradigm is known as signature-based detection. Another paradigm for intrusion detection is called anomaly-based detection. Elaborate on the advantages and disadvantages of each.
 
-Signature-based detection is based on predefined signatures or patterns of known malicious activities to identify threats. 
+**Signature-based detection** is based on predefined signatures or patterns of known malicious activities to identify threats. 
 It compares network traffic or system events against a signature database and triggers alerts when a match is found. 
 It is effective in detecting known threats but may struggle with new or unknown attacks.
 
-Anomaly-based detection however focuses on detecting deviations from normal behavior or baselines. 
+**Anomaly-based detection** however focuses on detecting deviations from normal behavior or baselines. 
 Anomaly-based detection establishes a baseline of normal activity and generates alerts (Intrusion Detection System) or takes action (Intrusion Detection and Handling System) when abnormal behavior or suspicious activity is detected. 
 It is effective in detecting previously unseen attacks but may generate more false positives and also require more resources.
 
