--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -150,6 +150,12 @@ alert tcp any any -> $HOME_NET any (flags: S; threshold: type limit, track by_sr
 
 
 
+## 7.2.6 Conclusion - All the rules added
+
+![all_rules](images/all_rules.png)
+
+
+
 #### Q3: In this assignment, you have written specific rules to discover attacks. This paradigm is known as signature-based detection. Another paradigm for intrusion detection is called anomaly-based detection. Elaborate on the advantages and disadvantages of each.
 
 **Signature-based detection** is based on predefined signatures or patterns of known malicious activities to identify threats. 
