Update 7.2 Snort in intrusion detection mode.md

--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -168,4 +168,4 @@ It is effective in detecting previously unseen attacks but may generate more fal
 
 
 #### Q4: If you remember only one thing from this lab, what should it be?
-Making rules can be cumbersome. In signature-based detection the rules set should be generalized as much as possible to detect alicious activities on the network.
+Making rules can be cumbersome. In signature-based detection the rules set should be generalized as much as possible to detect malicious activities on the network.
