--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -10,6 +10,8 @@
 ![attack_1](images/attack_1.png)
 
 - the `/bin/sh` command is used in scripts or other programs as a way to execute system commands or run shell scripts. 
+- In the suspect2 attack, we see that the attacker tired to access the shell. This could be the exploitation attack where the attacker wants to exploit the vulnerabilities of the sytem, one such vulberabilities could be buffer overflow. 
+- The payload also a disassembled code that the attacker wanted to execute at the host machine.
 
 **Add rules to discover attacks**
 
