Update 7.2 Snort in intrusion detection mode.md
added link for more info on the disassembly and the shell code.

--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -11,7 +11,7 @@
 
 - the `/bin/sh` command is used in scripts or other programs as a way to execute system commands or run shell scripts. 
 - In the suspect2 attack, we see that the attacker tired to access the shell. This could be the exploitation attack where the attacker wants to exploit the vulnerabilities of the sytem, one such vulberabilities could be buffer overflow. 
-- The payload could also be a disassembled code that the attacker wanted to execute at the host machine.
+- The payload could also be a disassembled code that the attacker wanted to execute at the host machine. More on disassembly and shell code can be found on this link: https://infosecwriteups.com/exploitation-with-shellcode-23470cd2aa55
 
 **Add rules to discover attacks**
 
