assign 4 attack 5 updated

--- a/Assignment_4/7.2 Snort in intrusion detection mode.md
+++ b/Assignment_4/7.2 Snort in intrusion detection mode.md
@@ -105,7 +105,7 @@ alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA; content:"0x"; content:"ac
 
 
 
-## 7.2.5 Suspect 5: SYN Flooding
+## 7.2.5 Suspect 5: ~~SYN Flooding~~ illegal source IP
 
 - The SYN flag is used during the TCP three-way handshake to initiate a connection between two hosts. 
 
@@ -131,7 +131,7 @@ alert tcp any any -> $HOME_NET $HTTP_PORTS (flags: PA; content:"0x"; content:"ac
 
 We have observed from the wireshark logs that in suspect5 attack, the SYN (TCP synchronization) and **ECN** **(Explicit Congestion Notification)** flags are sent together repetitively to the destination from different IP addresses. This type of network attack can lead to a more sophisticated and impactful form of denial-of-service (DoS) attacks. Some potential impact of this attack can be 'amplification attack', and 'resource exhaustion'. From the literature review we found that it may require more sophisticated mitigation techniques as well as higher network capacity to handle the increased traffic and congestion notifications effectively.
 
-**Add rules to discover attacks**
+~~**Add rules to discover attacks**~~
 
 ```shell
 alert tcp any any -> $HOME_NET any (flags: S; threshold: type limit, track by_src, count 10, seconds 1; msg:"Potential SYN flooding attack"; sid: 100008)
@@ -153,9 +153,17 @@ alert tcp any any -> $HOME_NET any (flags: S; threshold: type limit, track by_sr
 
 
 
+**Add rules to discover attacks - A second time**
+
+```shell
+alert tcp !10.0.0.1/24 any -> $HOME any (msg:"illegal source ip address"; sid: 100009)
+```
+
+![illegal_ip_address](images/illegal_ip_address.png)
+
 ## 7.2.6 Conclusion - All the rules added
 
-![all_rules](images/all_rules.png)
+![final_rules](images/final_rules.png)
 
 
 
